[UVMS-3135] * Small design fixes on mobile terminal status

--- a/app/partial/mobileTerminal/mobileTerminal.less
+++ b/app/partial/mobileTerminal/mobileTerminal.less
@@ -15,3 +15,8 @@ copy of the GNU General Public License along with the IFDM Suite. If not, see <h
 .editrow{
 	margin-bottom: 10px;
 }
+
+.mobile-terminal-status.label {
+	padding: 3px 6px;
+	letter-spacing: 0.5px;
+}
